# ModelGate

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.openspec/: config.yaml
openspec/changes/smctl-tool-v1/: design.md  proposal.md  tasks.md
openspec/changes/smctl-tool-v1/specs/: cli-interface.md  formal-methods.md  git-flow.md  git-worktree.md  mcp-server.md  openspec-workflow.md
smctl/: Cargo.toml
smctl-build/: Cargo.toml
smctl-build/src/: lib.rs
smctl-config/: Cargo.toml
smctl-config/src/: lib.rs
smctl-flow/: Cargo.toml
smctl-flow/src/: lib.rs
smctl-flow/tests/: integration.rs
smctl-gate/: Cargo.toml
smctl-gate/src/: lib.rs
smctl-mcp/: Cargo.toml
smctl-mcp/src/: lib.rs
smctl-spec/: Cargo.toml
smctl-spec/src/: lib.rs
smctl-workspace/: Cargo.toml
smctl-workspace/src/: lib.rs
smctl-workspace/tests/: integration.rs
smctl-worktree/: Cargo.toml
smctl-worktree/src/: lib.rs
smctl/src/: lib.rs  main.rs
smctl/tests/: cli.rs
