[workspace]
members = [
    "smctl",
    "smctl-workspace",
    "smctl-worktree",
    "smctl-flow",
    "smctl-spec",
    "smctl-build",
    "smctl-gate",
    "smctl-config",
    "smctl-mcp",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SmallAIOS/ModelGate"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Git
git2 = "0.20"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# MCP
rmcp = { version = "0.1", features = ["server", "transport-io", "transport-sse-server"] }

# Policy
cedar-policy = "4"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"
