[package]
name = "smctl-build"
description = "Build orchestration for smctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
smctl-workspace = { path = "../smctl-workspace" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
