[package]
name = "smctl-workspace"
description = "Workspace and worktree management for smctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
git2.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
