[package]
name = "smctl"
description = "SmallAIOS control — unified CLI for the SmallAIOS ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "smctl"
path = "src/main.rs"

[dependencies]
smctl-workspace = { path = "../smctl-workspace" }
smctl-flow = { path = "../smctl-flow" }
smctl-spec = { path = "../smctl-spec" }
smctl-build = { path = "../smctl-build" }

clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
